# ground_based_autonomy_basic

./: .gitignore  README.md  Readme.txt
src/joystick_drivers/: README.md
src/joystick_drivers/joy/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  package.xml
src/joystick_drivers/joy/config/: ps4joy.yaml
src/joystick_drivers/joy/launch/: ps4joy.launch
src/joystick_drivers/joy/migration_rules/: Joy.bmr
src/joystick_drivers/joy/scripts/: joy_remap.py
src/joystick_drivers/joy/test/: test_joy_msg_migration.py
src/joystick_drivers/joy/test/saved/: Joy.saved
src/joystick_drivers/joystick_drivers/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/joystick_drivers/ps3joy/: CHANGELOG.rst  CMakeLists.txt  README.md  diagnostics.yaml  package.xml
src/joystick_drivers/ps3joy/doc/: bluetooth_devices.md  testing.md  troubleshooting.md
src/joystick_drivers/ps3joy/launch/: ps3.launch
src/joystick_drivers/ps3joy/scripts/: ps3joy.py  ps3joy_node.py  ps3joysim.py
src/joystick_drivers/ps3joy/src/: sixpair.c
src/loam_interface/: CMakeLists.txt  package.xml
src/loam_interface/launch/: loam_interface.launch
src/loam_interface/src/: loamInterface.cpp
src/local_planner/: CMakeLists.txt  package.xml
src/local_planner/launch/: local_planner.launch
src/local_planner/paths/: pathList.ply  path_generator.m  paths.ply  startPaths.ply
src/local_planner/src/: localPlanner.cpp  pathFollower.cpp
src/terrain_analysis/: CMakeLists.txt  package.xml
src/terrain_analysis/launch/: terrain_analysis.launch
src/terrain_analysis/src/: terrainAnalysis.cpp
src/vehicle_simulator/: CMakeLists.txt  package.xml
src/vehicle_simulator/launch/: system.launch  vehicle_simulator.launch
src/vehicle_simulator/rviz/: vehicle_simulator.rviz
src/vehicle_simulator/sensor/: camera.urdf.xacro  lidar.urdf.xacro  sensor.urdf.xacro
src/vehicle_simulator/src/: vehicleSimulator.cpp
src/vehicle_simulator/world/: example.world  mesh.world
src/velodyne_simulator/: LICENSE  README.md
src/velodyne_simulator/velodyne_description/: CHANGELOG.rst  package.xml
src/velodyne_simulator/velodyne_description/launch/: example.launch
src/velodyne_simulator/velodyne_description/urdf/: HDL-32E.urdf.xacro  VLP-16.urdf.xacro  example.urdf.xacro
src/velodyne_simulator/velodyne_gazebo_plugins/: CHANGELOG.rst  package.xml
src/velodyne_simulator/velodyne_gazebo_plugins/include/velodyne_gazebo_plugins/: GazeboRosVelodyneLaser.h
src/velodyne_simulator/velodyne_gazebo_plugins/src/: GazeboRosVelodyneLaser.cpp
src/velodyne_simulator/velodyne_simulator/: CHANGELOG.rst  package.xml
src/waypoint_example/: CMakeLists.txt  package.xml
src/waypoint_example/data/: boundary.ply  waypoints.ply
src/waypoint_example/launch/: waypoint_example.launch
src/waypoint_example/src/: waypointExample.cpp
